# TemplateStateMachine

./: Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
crates/alltest/: Cargo.toml
crates/alltest/src/: consensus_unit_test.rs  lib.rs
crates/consensus/: Cargo.toml
crates/consensus/benches/: bench.rs  client.rs  cluster.rs  main.rs
crates/consensus/configs/: local-cluster-3.json
crates/consensus/src/: bounds.rs  cache.rs  cmd.rs  config.rs  deps.rs  exec.rs  file_io.rs  graph.rs  id.rs  lib.rs  log.rs  msg.rs  peers.rs  replica.rs  store.rs
crates/consensus/src/monitor/: config.rs  mod.rs  run.rs  server_call_monitor.rs
crates/consensus/src/network/: client_ask.rs  local_network.rs  member_network.rs  member_register.rs  membership_watcher.rs  mod.rs  rpc_network.rs  tcp_network.rs
crates/consensus/src/protocol/: acc.rs  addr_map.rs  batch_command.rs  bounds.rs  cache.rs  cmd.rs  config.rs  deps.rs  exec.rs  graph.rs  id.rs  instance.rs  log.rs  membership.rs  message.rs  mod.rs  peers.rs  replica.rs  status.rs
crates/consensus/src/server/: client_call_server.rs  config.rs  consensus_server.rs  mod.rs  net.rs  peer_call_server.rs  rpc.rs  run.rs  serve.rs
crates/consensus/src/storage/: file_io.rs  memory_data_store.rs  memory_log_store.rs  mod.rs  store.rs
crates/consensus/src/utils/: bytes_str.rs  chan.rs  codec.rs  config.rs  flag_group.rs  hook.rs  iter.rs  lock.rs  mod.rs  onemap.rs  radixmap.rs  stepper.rs  tracing.rs  watermark.rs
crates/consensus/tests/configs/: local-bench-3.json  local-cluster-5.json
crates/evaluate/: Cargo.toml
crates/evaluate/src/: bench.rs  client.rs  cluster.rs  lib.rs  main.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs  main.rs
crates/monitor/tests/: config.rs  local-monitor.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: cs.rs  rpc.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  net.rs
crates/server/tests/: config.rs  local-server.toml
crates/utils/: Cargo.toml
crates/with-rocksdb/: Cargo.toml
crates/with-rocksdb/src/: data_db.rs  db_utils.rs  log_db.rs  log_key.rs  value.rs
crates/with-rocksdb/src/cmd/: batched.rs  notify.rs  single.rs
crates/with-rocksdb/tests/: log_db.rs
crates/with-templatedb/: Cargo.toml
crates/with-templatedb/src/: data_store.rs  lib.rs  log_store.rs
proto/: consensus.proto
src/: error.rs  lib.rs
src/consensus/: config.rs  consensus_impl.rs  execute.rs  instance.rs  mod.rs  peer.rs  replica.rs
src/epaxos/: command.rs  config.rs  consensus.rs  execute.rs  instance.rs  message.rs  mod.rs  replica.rs  types.rs  util.rs
src/server/: consensus_server.rs  mod.rs  rpc_server.rs  serve.rs
src/state_machine/: mod.rs  stm.rs
src/wal/: mod.rs  wal_trait.rs
src/write_ahead_log/: mod.rs  wal.rs
