[package]
name = "leaderless_statemachine"
version = "0.1.0"
edition = "2021"

[dependencies]
# actix = { git = "https://github.com/devillove084/actix.git" }
bytes = { version = "1.7.2", features = ["serde"] }
async-trait = "0.1.82"
bincode = "1.3.3"
env_logger = "0.11.5"
futures = "0.3.30"
dashmap = { version = "6.1.0", features = ["inline"] }
itertools = "0.13.0"
log = "0.4.21"
mockall = "0.13.0"
petgraph = "0.6.5"
proc-macro2 = "1.0.78"
quote = "1.0.35"
serde = { version = "1.0.210", features = ["derive"] }
syn = "2.0.52"
thiserror = "1.0.57"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
yaml-rust = "0.4.5"
pro-macro = { path = "pro-macro" }
derivative = "2.2.0"
prost = "0.12.3"
tonic = "0.11.0"
crc32fast = "1.4.0"
libc = "0.2.153"
tempfile = "3.10.1"
anyerror = "0.1.12"
tracing = "0.1.40"
snafu = "0.8.3"

[dev-dependencies]
clap = { version = "4.5.2", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11.0"
