[package]
name = "leaderless_statemachine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.7.2", features = ["serde"] }
async-trait = "0.1.82"
dashmap = { version = "6.1.0", features = ["inline"] }
mockall = "0.13.0"
petgraph = "0.6.5"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["net"] }
yaml-rust = "0.4.5"
prost = "0.13.3"
tonic = "0.12.2"
snafu = "0.8.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
ctor = "0.2.8"
tracing-subscriber = "0.3.18"
# clap = { version = "4.5.2", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.2"
