[package]
name = "evaluate"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
asc = "0.1.1"
bytes = "1.7.2"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.18", features = ["derive"] }
crossbeam-queue = "0.3.11"
protocol = { path = "../protocol" }
server = { path = "../server" }
utils = { path = "../utils" }
futures-util = "0.3.30"
numeric_cast = "0.2.1"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simdutf8 = "0.1.5"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.41.0", features = ["full"] }
wgp = "0.2.0"
