[package]
name = "monitor"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.18", features = ["derive"] }
consensus = { path = "../consensus" }
protocol = { path = "../protocol" }
utils = { path = "../utils" }
parking_lot = "0.12.3"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
wgp = "0.2.0"
