[package]
name = "protocol"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = { version = "1.7.2", features = ["serde"] }
consensus = { path = "../consensus" }
with-rocksdb = { path = "../with-rocksdb" }
utils = { path = "../utils" }
fnv = "1.0.7"
futures-util = { version = "0.3.30", features = ["sink"] }
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
scopeguard = "1.2.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
wgp = "0.2.0"
