cargo-features = ["edition2024"]

[package]
name = "with-rocksdb"
version = "0.2.0"
edition = "2024"

[dependencies]
tempdir = "0.3.7"
async-trait = "0.1.83"
anyhow = { version = "1.0.89", features = ["backtrace"] }
asc = "0.1.1"
bytemuck = { version = "1.18.0", features = ["derive"] }
bytes = { version = "1.7.2", features = ["serde"] }
camino = { version = "1.1.9", features = ["serde"] }
consensus = { path = "../consensus" }
numeric_cast = "0.2.1"
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
parking_lot = "0.12.3"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"

[dependencies.rocksdb]
git = "https://github.com/rust-rocksdb/rust-rocksdb.git"
rev = "6face7bb142d3d586383a99997e183db363f97fb"         # 2024-05-03
features = ["jemalloc"]
