[package]
name = "with-templatedb"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.92"
async-trait = "0.1.83"
asc = { version = "0.1.1", features = ["serde"] }
dashmap = "6.1.0"
consensus = { path = "../consensus" }
fnv = "1.0.7"
futures-util = "0.3.31"
numeric_cast = "0.2.1"
once_cell = "1.20.1"
ordered-vecmap = { version = "0.2.0", features = ["serde"] }
parking_lot = "0.12.3"
rand = "0.8.5"
scopeguard = "1.2.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.0", features = ["full"] }
opendal = "0.50.1"
bytes = "1.5"
url = "2"
bincode = "1.3.3"
tracing = "0.1.41"